--- a/saas-application/package.json
+++ b/saas-application/package.json
@@ -6,11 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node ./scripts/loadDb.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
+    "@langchain/community": "^0.3.12",
+    "@langchain/core": "^0.3.17",
+    "dotenv": "^16.4.5",
     "next": "15.0.3",
+    "openai": "^4.71.1",
+    "puppeteer": "^23.7.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
@@ -22,6 +28,7 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
