--- a/saas-application/package.json
+++ b/saas-application/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "saas-application",
+  "name": "rag-llm-js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "seed": "ts-node ./scripts/loadDb.ts",
-    "lint": "next lint"
+    "lint": "next lint",
+    "git": "git add . && git commit -m 'init' && git push ",
+    "seed": "ts-node ./scripts/loadDb.ts"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
     "@langchain/community": "^0.3.12",
-    "@langchain/core": "^0.3.17",
+    "@pinecone-database/pinecone": "^4.0.0",
+    "ai": "^3.4.33",
     "dotenv": "^16.4.5",
+    "langchain": "^0.3.5",
     "next": "15.0.3",
     "openai": "^4.71.1",
     "puppeteer": "^23.7.1",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,9 +30,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5"
   }
 }
