--- a/rag_app/backend/app/requirements.txt
+++ b/rag_app/backend/app/requirements.txt
@@ -8,7 +8,7 @@ cloudinary==1.41.0
 colorama==0.4.6
 distro==1.9.0
 dnspython==2.7.0
-fastapi==0.115.5
+fastapi
 filelock==3.16.1
 fsspec==2024.10.0
 google-ai-generativelanguage==0.6.10
