--- a/rag_app/backend/requirements.txt
+++ b/rag_app/backend/requirements.txt
@@ -27,7 +27,7 @@ httplib2==0.22.0
 httpx==0.27.2
 huggingface-hub==0.26.2
 idna==3.10
-Jinja2==3.1.4
+Jinja2
 jiter==0.7.1
 joblib==1.4.2
 MarkupSafe==3.0.2
